--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,12 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
+    "nodemailer": "^6.7.8",
     "nodemailer-express-handlebars": "^5.0.0",
-    "nodemon": "^2.0.16",
     "socket.io": "^4.5.1",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
